--- a/VhallAndroidSDKLiveDemo/app/src/main/AndroidManifest.xml
+++ b/VhallAndroidSDKLiveDemo/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
     package="com.vhall.vhlive">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <queries>
@@ -33,7 +32,7 @@
         </activity>
 
         <activity
-            android:name="com.vhlive.wxapi.WXPayEntryActivity"
+            android:name=".wxapi.WXPayEntryActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:exported="true"
